Fixed wrapping of long output file name and styled inputs

--- a/agavedancer/public/styles/layout.less
+++ b/agavedancer/public/styles/layout.less
@@ -40,6 +40,7 @@ html, body {
 
 .rightbar .list-group-item {
 	margin-left: -7px;
+	word-wrap: break-word;
 }
 
 .rightbar .btn {
